<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:droibit="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.droibit.lpwidget.MainActivity">

    <com.droibit.lpwidget.EditablePointView
        android:id="@+id/edit_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        droibit:point_text="@string/text_current_point"
        droibit:min_point="@integer/num_of_min_current_point"
        droibit:max_point="@integer/num_of_max_max_point" />

    <com.droibit.lpwidget.EditablePointView
        android:id="@+id/edit_max"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        droibit:point_text="@string/text_max_point"
        droibit:min_point="@integer/num_of_min_max_point"
        droibit:max_point="@integer/num_of_max_max_point"/>

    <TextView
        android:id="@+id/text_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_remaining_time"
        android:layout_marginTop="@dimen/layout_line_margin_top"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:textAppearanceLarge"/>

    <Button
        android:id="@+id/button_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_line_margin_top"
        android:text="@string/button_text_play"
        android:onClick="onToggleState"/>

</LinearLayout>
