<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_current_point"
        android:layout_alignBottom="@id/edit_current"
        android:layout_marginRight="7.5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_minus"
        android:background="@drawable/counter_button"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/button_minus" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="0"
        android:maxLength="3"
        android:ems="4"
        android:id="@+id/edit_point" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_plus"
        android:background="@drawable/counter_button"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/button_plus" />

</LinearLayout>